# denver-university-ict-4485

./: README.md  pyproject.toml
ict_4485_week_10/: .env  config.py  main.py
ict_4485_week_10/api/v1/: api.py
ict_4485_week_10/api/v1/endpoints/: info.py
ict_4485_week_10/api/v1/endpoints/mflix/: __init__.py  comments.py  embeded_movies.py  movies.py  sessions.py  theaters.py  users.py
ict_4485_week_10/db/: lifespan.py
ict_4485_week_10/models/: comment_models.py  core_models.py  db_models.py  movie_models.py  session_models.py  theater_models.py  user_models.py
