[tool.poetry]
name = "ict-4485-week-10"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
pandas = "^2.2.2"
motor = {extras = ["srv"], version = "^3.5.1"}
pydantic-settings = "^2.4.0"
uvicorn = "^0.30.6"
pydantic = {extras = ["email"], version = "^2.8.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
